tools/architecture/validate-source-imports/tests/fixtures/invalid/package-cycle/packages/pkg-beta/src/index.ts
import { alpha } from "@platform/pkg-alpha";
export const bar = `beta+${alpha}`;
